# Rumia

./: CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  build-and-push.yml  codeql.yml  fast-forward.yml
healthcheck/: Cargo.toml  Makefile.toml
healthcheck/src/: main.rs
src/: error.rs  lib.rs  main.rs  routes.rs  settings.rs  storage.rs
src/storage/: debug.rs  filesystem.rs
tests/: common.rs  endpoints.rs
