[workspace]
members = [ "healthcheck"]

[package]
name = "rumia"
version = "0.2.4"
edition = "2024"
exclude = ["/resources/test"]
license = "AGPL-3.0-or-later"

[dependencies]
dotenv = "0.15"
clap = { version = "4", features = ["derive", "env"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rocket = "0.5"
tokio = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "stream"] }

[features]
default = ["cli"]
cli = ["dep:clap"]
docker = []

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "warn"
indexing_slicing = "deny"